--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -1,6 +1,9 @@
 .App {
   text-align: center;
   display: flex;
+  min-height: 100vh;
+  background-size: cover;
+  background-repeat: no-repeat;
 }
 
 .App-logo {
@@ -43,6 +46,14 @@
 .App-link {
   color: #fff;
   font-size: 22px;
+}
+
+.row-container {
+  height: 100vh;
+}
+
+.col-container {
+  width: 500px;
 }
 
 @media screen and (max-width: 700px) {
