--- a/src/components/PokemonList/PokemonList.css
+++ b/src/components/PokemonList/PokemonList.css
@@ -1,18 +1,13 @@
 .data-section {
   display: flex;
   flex-direction: row;
-  flex-wrap: nowrap;
-  align-content: center;
-  justify-content: center;
-  align-items: center;
 }
 
 .main-ul {
   list-style: none;
   text-align: left;
-  width: 80%;
+  width: 100%;
   padding: 0;
-  display: inline-flex;
-  justify-content: space-between;
-  align-items: center;
+  display: flex;
+  justify-content: space-evenly;
 }
