feat: pokemon cards

--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -24,7 +24,7 @@
   padding: 15px;
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: flex-end;
 }
 
 .separator-section {
