--- a/src/components/AuthCard/AuthCard.css
+++ b/src/components/AuthCard/AuthCard.css
@@ -50,7 +50,7 @@ text {
   height: 50px;
   width: 50px;
   border-radius: 50%;
-  border: 5px solid #aaa;
+  border: 5px solid rgba(255, 255, 255, 0.6);
   cursor: pointer;
 }
 
@@ -69,4 +69,18 @@ text {
   height: 500px;
   border-radius: 50%;
   border: 5px solid #fff;
+}
+
+/**Pulse animation keyframes**/
+.pulse {
+  animation: pulse-animation 2s infinite;
+}
+
+@keyframes pulse-animation {
+  0% {
+    box-shadow: 0 0 0 0px rgba(255, 255, 255, 0.6);
+  }
+  100% {
+    box-shadow: 0 0 0 20px rgba(0, 0, 0, 0);
+  }
 }
