feat: responsive initial approach implementation

--- a/src/components/PokemonList/PokemonList.css
+++ b/src/components/PokemonList/PokemonList.css
@@ -11,3 +11,20 @@
   display: flex;
   justify-content: space-evenly;
 }
+
+@media (max-width: 1000px) {
+  .main-ul {
+    list-style: none;
+    text-align: left;
+    width: 100%;
+    padding: 0;
+    display: flex;
+    justify-content: flex-start;
+    flex-direction: row;
+    overflow-x: scroll;
+  }
+
+  .pokeball-icon {
+    display: none;
+  }
+}
