--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -17,7 +17,6 @@
   justify-content: flex-start;
   background-color: rgba(193, 85, 85, 1);
   padding: 15px;
-  flex-wrap: wrap;
 }
 
 .footer-section {
@@ -50,5 +49,13 @@
 
 .home-search-input {
   background-color: #fff;
+  width: 100%;
+}
+
+.search-input-container {
+  width: 95vw;
+}
+
+.search-input-container input {
   width: 100%;
 }
