--- a/src/components/PokemonDetailImage/PokemonDetailImage.css
+++ b/src/components/PokemonDetailImage/PokemonDetailImage.css
@@ -11,3 +11,18 @@
   flex-direction: row;
   justify-content: center;
 }
+
+@media (max-width: 768px) {
+  .card-container {
+    position: absolute;
+    top: -45px;
+    width: 375px;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+  }
+
+  .pokemon-image {
+    width: 90%;
+  }
+}
