--- a/src/components/PokemonCard/PokemonCard.css
+++ b/src/components/PokemonCard/PokemonCard.css
@@ -7,6 +7,14 @@
   background-color: rgba(255, 255, 255, 0.2);
 }
 
+.error-card-container {
+  max-width: 200px;
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
 @media (max-width: 768px) {
   .pokemon-card-container {
     position: absolute;
