--- a/src/components/Pokeball/Pokeball.css
+++ b/src/components/Pokeball/Pokeball.css
@@ -2,10 +2,52 @@
   display: grid;
   grid-template-rows: 1fr 1fr 1fr;
   width: 50px;
-  height: 50px;
+  height: 54px;
   align-items: center;
   justify-items: center;
   position: absolute;
+}
+
+.pokeball-section-container-login {
+  display: grid;
+  grid-template-rows: 1fr 1fr 1fr;
+  width: 400px;
+  height: 400px;
+  align-items: center;
+  justify-items: center;
+  position: absolute;
+}
+
+.pokeball-section-container-login .pokeball-section {
+  height: 200px;
+  width: 400px;
+  background-color: #fff;
+  border: 3px solid #363638;
+}
+
+.pokeball-section-container-login .pokeball-header {
+  border-radius: 200px 200px 0 0;
+  background-color: rgba(193, 85, 85, 1);
+}
+
+.pokeball-section-container-login .pokeball-footer {
+  border-radius: 0 0 200px 200px;
+}
+
+.pokeball-section-container-login .pokeball-btn {
+  height: 60px;
+  width: 60px;
+  border-radius: 50%;
+  background-color: #fff;
+  position: absolute;
+  top: 178px;
+  border: 5px solid;
+}
+
+.pokeball-section-container-login .pokeball-separator {
+  height: 5px;
+  width: 100%;
+  background-color: rgb(51, 51, 51);
 }
 
 .pokeball-section {
@@ -17,7 +59,7 @@
 
 .pokeball-separator {
   height: 1px;
-  width: 50px;
+  width: 100%;
   background-color: rgb(51, 51, 51);
 }
 
@@ -36,4 +78,63 @@
   border-radius: 50%;
   background-color: #fff;
   position: absolute;
+  top: 19px;
+}
+
+/**Pulse animation keyframes**/
+.pulse {
+  animation: pulse-animation 2s infinite;
+}
+
+@keyframes pulse-animation {
+  0% {
+    box-shadow: 0 0 0 0px rgba(0, 0, 0, 0.6);
+  }
+  100% {
+    box-shadow: 0 0 0 20px rgba(0, 0, 0, 0);
+  }
+}
+
+@media (max-width: 550px) {
+  .pokeball-section-container-login {
+    display: grid;
+    grid-template-rows: 1fr 1fr 1fr;
+    width: 200px;
+    height: 200px;
+    align-items: center;
+    justify-items: center;
+    position: absolute;
+  }
+
+  .pokeball-section-container-login .pokeball-section {
+    height: 100px;
+    width: 200px;
+    background-color: #fff;
+    border: 3px solid #363638;
+  }
+
+  .pokeball-section-container-login .pokeball-header {
+    border-radius: 200px 200px 0 0;
+    background-color: rgba(193, 85, 85, 1);
+  }
+
+  .pokeball-section-container-login .pokeball-footer {
+    border-radius: 0 0 200px 200px;
+  }
+
+  .pokeball-section-container-login .pokeball-btn {
+    height: 30px;
+    width: 30px;
+    border-radius: 50%;
+    background-color: #fff;
+    position: absolute;
+    top: 92px;
+    border: 5px solid;
+  }
+
+  .pokeball-section-container-login .pokeball-separator {
+    height: 2px;
+    width: 100%;
+    background-color: rgb(51, 51, 51);
+  }
 }
