--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -4,10 +4,12 @@
   justify-content: center;
   align-items: center;
   height: 100vh;
+  width: 100vw;
+  overflow: hidden;
 }
 
 .home-section {
-  width: 100%;
+  width: -webkit-fill-available;
   height: 48%;
 }
 
