--- a/src/pages/Login/App.css
+++ b/src/pages/Login/App.css
@@ -1,9 +1,19 @@
 .App {
   text-align: center;
   display: flex;
-  min-height: 100vh;
+  height: 100vh;
   background-size: cover;
   background-repeat: no-repeat;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.App h1 {
+  font-family: "pokemon";
+  color: rgb(255, 227, 103);
+  text-shadow: 0 0 15px #000, 0 0 15px #000;
+  font-size: 4rem;
+  letter-spacing: 5px;
 }
 
 .App-logo {
@@ -63,9 +73,8 @@
   flex-wrap: nowrap;
   justify-content: center;
   width: 100%;
-  align-content: center;
-  align-items: center;
-  height: 100vh;
+  align-items: flex-start;
+  height: 65%;
 }
 
 @media screen and (max-width: 700px) {
