--- a/src/assets/styles/index.css
+++ b/src/assets/styles/index.css
@@ -1,4 +1,7 @@
-@import url("//db.onlinewebfonts.com/c/f4d1593471d222ddebd973210265762a?family=Pokemon");
+@font-face {
+  font-family: "Pokemon";
+  src: url("../fonts/pokemon.woff2");
+}
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
