--- a/src/components/PokemonCard/PokemonCard.css
+++ b/src/components/PokemonCard/PokemonCard.css
@@ -26,3 +26,27 @@
     background-color: rgba(255, 255, 255, 0.2);
   }
 }
+
+@media (max-height: 900px) {
+  .pokemon-card-container {
+    position: absolute;
+    min-height: 330px;
+    max-height: 250px;
+    min-width: 275px;
+    border: 4px solid rgb(87, 87, 87);
+    border-radius: 25px;
+    background-color: rgba(255, 255, 255, 0.2);
+  }
+}
+
+@media (max-height: 665px) {
+  .pokemon-card-container {
+    position: absolute;
+    min-height: auto;
+    max-height: 250px;
+    min-width: 275px;
+    border: 4px solid rgb(87, 87, 87);
+    border-radius: 25px;
+    background-color: rgba(255, 255, 255, 0.2);
+  }
+}
