--- a/src/pages/Login/App.css
+++ b/src/pages/Login/App.css
@@ -77,6 +77,10 @@
   height: 65%;
 }
 
+.main-footer {
+  padding: 15px;
+}
+
 @media screen and (max-width: 700px) {
   .App {
     flex-direction: column;
